nginx-ingress/nginx-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
#  namespace: kube-system
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.16
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
#  namespace: kube-system
  name: nginx-service # a random name
spec:
  selector:  # to connect to Pod through label
    app: nginx
  ports:
    - port: 80  # service port
      protocol: TCP
      targetPort: 80  # container port
