nginx-ingress/nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #ingress.kubernetes.io/rewrite-target: /
#  namespace: kube-system
spec:
  rules:
    - host: nginx-ingress.airlan.cv.ua
      http:
        paths:
          - backend:
              serviceName: nginx-service
              servicePort: 80
